# codeowners-generator

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Pipfile  README.md  pyproject.toml  requirements.txt
codeowners/: __main__.py  cli.py  exceptions.py  utils.py
