[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov"
testpaths = ["tests"]
pythonpath = ["."]

[project]
name = "codeowners"
version = "1.0.0"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
codeowners = "codeowners.__main__:main"

[tool.setuptools]
packages = ["codeowners"]

[tool.isort]
profile = "black"

[tool.ruff]
pydocstyle.convention = "google"
select = [
    "RUF", # Ruff-specific rules
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "D",   # pydocstyle
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "PL",  # Pylint
    "TRY", # tryceratops
    "EM",  # flake8-errmsg
    "C4",  # flake8-comprehensions
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D104",    # Missing docstring in public package
    "D107",    # Missing docstring in `__init__`
    "D213",    # Multi-line docstring summary should start at the second line
    "E501",    # Line too long, handled by black
    "PLR2004", # Magic value used in comparison
    "S603",    # `subprocess` call: check for execution of untrusted input
    "S607",    # Starting a process with a partial executable path
    "TRY400",  # Use `logging.exception` instead of `logging.error`
]
